--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-icons": "^5.2.1",
     "react-parallax": "^3.5.1",
     "react-router": "^6.23.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
