--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "bootstrap": "^5.3.3",
     "flowbite-react": "^0.10.1",
     "font-awesome": "^4.7.0",
+    "lottie-react-native": "^7.0.0",
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-parallax": "^3.5.1",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
