--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "react-tsparticles": "^2.12.2",
+    "sweetalert2": "^11.14.1",
     "tsparticles": "^3.5.0"
   },
   "devDependencies": {
